[package]
name = "diesel-point"
version = "2.0.0"
edition = "2021"
authors = ["br0kenpixel"]
readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/br0kenpixel/diesel-point"
documentation = "https://docs.rs/diesel-point"
description = "Diesel support for Point types in Postgres"
keywords = ["sql", "orm", "diesel", "postgres", "point"]
categories = ["database"]

[dependencies]
diesel = { version = "2.2", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"], optional = true }
byteorder = "1.5"
